fix spacing in episode description

--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,7 @@ i {
   flex: 0;
   flex-basis: 0%;
 }
+
+.description {
+  white-space: pre-wrap;
+}
